--- a/index.html
+++ b/index.html
@@ -9,14 +9,31 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css">
 
 
-<!---------- This is my custom style sheet ---------->
+<!---------- This is my custom style sheet - THIS ALWAYS GOES LAST (external resources always go above this) ----------> 
         <link href="/style.css" rel="styleheet">
 
     </head>
 
+
+
 <!-------- Body is where all of the content for my page goes -------->
     <body> 
-        <header> Cassandra Fay Yoga </header>
+
+        <!---------- Header Banner ---------->
+        <header> 
+            <div class="header-nav grid"> 
+                <div class="col-4"> 
+                    <h2> Cassandra Fay Yoga </h2>
+                    <h3> Yoga Teacher, Brighton & Hove </h3>
+                </div>
+                <nav class="col-8">
+                    <a href="/about.html"> About </a>
+                    <a href="/offerings.html"> Offerings </a>
+                    <a href="/contact.html"> Contact </a>
+                </nav>
+            </div>
+            
+        </header>
 
 
 
