Trying to Add Image to Banner

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
 
     
-<!------ Body contains alll of the things we want to be displayed on the page ------>
+<!------ Body contains all of the things we want to be displayed on the page ------>
     <body>
 
         <header> </header>
