--- a/index.html
+++ b/index.html
@@ -17,26 +17,19 @@
 
 
 <!-------- Body is where all of the content for my page goes -------->
-    <body> 
+<body> 
 
-        <!---------- Header Banner ---------->
-        <header> 
-            <div class="header-nav grid"> 
-                <div class="col-4"> 
-                    <h2> Cassandra Fay Yoga </h2>
-                    <h3> Yoga Teacher, Brighton & Hove </h3>
-                </div>
-                <nav class="col-8">
-                    <a href="/about.html"> About </a>
-                    <a href="/offerings.html"> Offerings </a>
-                    <a href="/contact.html"> Contact </a>
-                </nav>
-            </div>
-            
-        </header>
+       <!------------ header banner ------------->
+    <header class="padded grid text-center tall-100">
+        <div class="col-12-middle">
+            <h1 class="font-weight-extra-bold editable">
+                Cassandra Fay Yoga
+            </h1>
+            <h3 class="font-weight-light editable"> Yoga Tecaher, brighton & Hove </h3>
+        </div>
+    </header>
 
 
-
-    </body>
+</body>
 
 </html>
