2nd attempt at adding images to yoga web 1

--- a/index.html
+++ b/index.html
@@ -25,9 +25,34 @@
             <h1 class="font-weight-extra-bold editable">
                 Cassandra Fay Yoga
             </h1>
-            <h3 class="font-weight-light editable"> Yoga Tecaher, brighton & Hove </h3>
+            <h3 class="font-weight-light editable"> Yoga Teacher, Brighton & Hove </h3>
         </div>
     </header>
+
+
+    <nav>
+        <a href="/about.html"> About </a>
+        <nav>
+            <a href="/offerings.html"> Offerings </a>
+        </nav>
+        <nav>
+            <a href="/contact.html"> Contact </a>
+        </nav>
+    </nav>
+
+<!-------------- gallery/ about section -------------->
+<section class="grid">
+    <div class="padded col-6-middle">
+        <h2 class="editable"> Hello beautiful soul
+        </h2>
+        <p class="editable"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <p class="editable"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur cupiditate non maxime aspernatur expedita dignissimos, corporis sapiente, ipsum minus optio qui impedit id natus corrupti.
+        </p> 
+    </div>
+    <div class="bg-image bg-prayer col-6 tall-70">
+        <!--- background image prayer --->
+    </div>
+
 
 
 </body>
