--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <!---------- This is my custom style sheet - THIS ALWAYS GOES LAST (external resources always go above this) ----------> 
-        <link href="/style.css" rel="styleheet">
+        <link href="/style.css" rel="stylesheet">
 
     </head>
 
@@ -20,15 +20,13 @@
 <body> 
 
        <!------------ header banner ------------->
-    <header class="padded grid text-center tall-100">
-        <div class="col-12-middle">
-            <h1 class="font-weight-extra-bold editable">
-                Cassandra Fay Yoga
-            </h1>
-            <h3 class="font-weight-light editable"> Yoga Teacher, Brighton & Hove </h3>
-        </div>
-    </header>
-
+        <header class="padded grid text-center tall-50">
+            <div class="col-12-middle">
+                <h1> Cassandra Fay Yoga </h1>
+                <h3> Yoga Teacher, Brighton & Hove </h3>
+            </div>
+        </header>
+    
 
     <nav>
         <a href="/about.html"> About </a>
@@ -49,7 +47,7 @@
         <p class="editable"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur cupiditate non maxime aspernatur expedita dignissimos, corporis sapiente, ipsum minus optio qui impedit id natus corrupti.
         </p> 
     </div>
-    <div class="bg-image bg-prayer col-6 tall-70">
+    <div class="bg-prayer col-6 tall-40">
         <!--- background image prayer --->
     </div>
 
