--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-------- Body is where all of the content for my page goes -------->
 <body> 
 
-       <!------------ header banner ------------->
+       <!-------------- header banner --------------->
         <header class="padded grid text-center tall-50">
             <div class="col-12-middle">
                 <h1> Cassandra Fay Yoga </h1>
@@ -38,19 +38,34 @@
         </nav>
     </nav>
 
-<!-------------- gallery/ about section -------------->
+<!-------------- about section ---------------->
 <section class="grid">
     <div class="padded col-6-middle">
-        <h2 class="editable"> Hello beautiful soul
+        <h2> Hello beautiful soul
         </h2>
-        <p class="editable"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        <p class="editable"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur cupiditate non maxime aspernatur expedita dignissimos, corporis sapiente, ipsum minus optio qui impedit id natus corrupti.
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur cupiditate non maxime aspernatur expedita dignissimos, corporis sapiente, ipsum minus optio qui impedit id natus corrupti.
         </p> 
     </div>
-    <div class="bg-prayer col-6 tall-40">
-        <!--- background image prayer --->
+    <div class="bg-image bg-prayer col-6 tall-40">
+        <!----- background image prayer ----->
     </div>
+</section>    
 
+
+
+<!-- I WANT TO PUT A BANNER IMAGE & BUTTON LINK TO 'OFFERINGS' PAGE HERE -->
+
+
+
+<!----------- Testimonials Section ----------->
+<section class="grid">
+    <div class="col-6"> 
+        <h2> Kind words from you </h2>
+        <p class="col-6"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et impedit numquam dolores nemo quae dicta aperiam vitae delectus facilis dignissimos exercitationem, labore officia enim iusto est corporis fugiat repellat perspiciatis?</p>
+    </div>
+    <div> </div>
+</section>
 
 
 </body>
