Adding Images & Sections to Home Page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-------- Body is where all of the content for my page goes -------->
 <body> 
 
-       <!-------------- header banner --------------->
+       <!---------------- header banner ----------------->
         <header class="padded grid text-center tall-50">
             <div class="col-12-middle">
                 <h1> Cassandra Fay Yoga </h1>
@@ -38,35 +38,45 @@
         </nav>
     </nav>
 
-<!-------------- about section ---------------->
-<section class="grid">
-    <div class="padded col-6-middle">
-        <h2> Hello beautiful soul
-        </h2>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur cupiditate non maxime aspernatur expedita dignissimos, corporis sapiente, ipsum minus optio qui impedit id natus corrupti.
-        </p> 
-    </div>
-    <div class="bg-image bg-prayer col-6 tall-40">
-        <!----- background image prayer ----->
-    </div>
-</section>    
+<!---------------- about section ------------------>
+    <section class="grid">
+        <div class="padded col-6">
+            <h2> Hello beautiful soul </h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur cupiditate non maxime aspernatur expedita dignissimos, corporis sapiente, ipsum minus optio qui impedit id natus corrupti.
+            </p> 
+        </div>
+     <!------ background image prayer ------>
+        <div class="bg-image bg-prayer col-6 tall-40">
+        </div>
+    </section>    
 
 
 
-<!-- I WANT TO PUT A BANNER IMAGE & BUTTON LINK TO 'OFFERINGS' PAGE HERE -->
+<!----- Banner image & button link to 'offerings' page ----->
+    <section> 
+        <!----- background image warrior3 ----->
+        <div class="bg-image bg-warrior3 col-12 tall-50"> </div>
+    </section>
 
 
+<!-------------- Testimonials Section -------------->
+    <section class="grid">
+        <div> 
+            <h2 class="col-6"> Kind words from you </h2>
+            <p class="col-6"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et impedit numquam dolores nemo quae dicta aperiam vitae delectus facilis dignissimos exercitationem, labore officia enim iusto est corporis fugiat repellat perspiciatis?</p>
+        </div>
+    </section>
 
-<!----------- Testimonials Section ----------->
-<section class="grid">
-    <div class="col-6"> 
-        <h2> Kind words from you </h2>
-        <p class="col-6"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et impedit numquam dolores nemo quae dicta aperiam vitae delectus facilis dignissimos exercitationem, labore officia enim iusto est corporis fugiat repellat perspiciatis?</p>
-    </div>
-    <div> </div>
-</section>
-
+<!------------- Youtube Video/ Link ------------->
+    <section class="grid">
+        <div> 
+            <h3> Flow with me on Youtube </h3>
+        </div>
+        <!------ background image youtube ------>
+        <div class="bg-image bg-youtube col-6 tall-40">
+        </div>
+    </section>
 
 </body>
 
