Adding Testimonials Section & Footer

--- a/index.html
+++ b/index.html
@@ -64,19 +64,45 @@
     <section class="grid">
         <div> 
             <h2 class="col-6"> Kind words from you </h2>
-            <p class="col-6"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et impedit numquam dolores nemo quae dicta aperiam vitae delectus facilis dignissimos exercitationem, labore officia enim iusto est corporis fugiat repellat perspiciatis?</p>
+            <div>
+                <span> " </span> 
+            </div>
+            <div>
+                <p class="col-6"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et impedit numquam dolores nemo quae. </p>
+                <p> - A very happy customer </p>
+            </div>
+            <div>
+                <span> " </span> 
+            </div>
         </div>
     </section>
 
 <!------------- Youtube Video/ Link ------------->
     <section class="grid">
         <div> 
-            <h3> Flow with me on Youtube </h3>
+            <h3 class="col-6"> Flow with me on Youtube </h3>
         </div>
         <!------ background image youtube ------>
         <div class="bg-image bg-youtube col-6 tall-40">
         </div>
     </section>
+
+
+<!------------------ Footer ------------------->
+    <footer>
+        <div>
+            <h2> Let's connect </h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem nostrum mollitia minima, recusandae expedita. Culpa provident ullam repellendus. </p>
+        </div>
+        <div>
+            <p> Call: 077777777 </p>
+            <p> Email: hello@yoga.com </p>
+            <p> Website: www.cassandrafayyoga.com </p>
+            <p> Instagram: @cassandrafayyoga </p>
+        </div>
+
+    </footer>
+
 
 </body>
 
