html basic structure set up

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title> Cassandra Fay Yoga </title>
 
 
-<!---------- Gridlex for Flexbox Grids ---------->
+<!------------ Gridlex for Flexbox Grids ------------>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css">
 
 
@@ -56,31 +56,31 @@
 <!----- Banner image & button link to 'offerings' page ----->
     <section> 
         <!----- background image warrior3 ----->
-        <div class="bg-image bg-warrior3 col-12 tall-50"> </div>
+        <div class="bg-image bg-warrior3 col-12"> </div>
     </section>
 
 
 <!-------------- Testimonials Section -------------->
-    <section class="grid">
-        <div> 
-            <h2 class="col-6"> Kind words from you </h2>
-            <div>
-                <span> " </span> 
+    <section class="grid padded">
+            <div class="padded-sm col-5">  
+                <h3> Kind words from you </h3>
             </div>
             <div>
-                <p class="col-6"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et impedit numquam dolores nemo quae. </p>
+                <span class="col-1"> " </span> 
+            </div>
+            <div class="padded-sm col-5">
+                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et impedit numquam dolores nemo quae. </p>
                 <p> - A very happy customer </p>
             </div>
             <div>
-                <span> " </span> 
+                <span class="col-1"> " </span> 
             </div>
-        </div>
     </section>
 
 <!------------- Youtube Video/ Link ------------->
-    <section class="grid">
-        <div> 
-            <h3 class="col-6"> Flow with me on Youtube </h3>
+    <section class="grid padded">
+        <div  class="col-6"> 
+            <h3> Flow with me on Youtube </h3>
         </div>
         <!------ background image youtube ------>
         <div class="bg-image bg-youtube col-6 tall-40">
@@ -89,12 +89,12 @@
 
 
 <!------------------ Footer ------------------->
-    <footer>
-        <div>
-            <h2> Let's connect </h2>
+    <footer class="padded grid-spaceBetween">
+        <div class="col-5">
+            <h3> Let's stay connected </h3>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem nostrum mollitia minima, recusandae expedita. Culpa provident ullam repellendus. </p>
         </div>
-        <div>
+        <div class="col-5">
             <p> Call: 077777777 </p>
             <p> Email: hello@yoga.com </p>
             <p> Website: www.cassandrafayyoga.com </p>
