Adding background colours to sections

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 <!-------------- Testimonials Section -------------->
-    <section class="grid padded">
+    <section class="grid padded bg-light">
             <div class="padded-sm col-5">  
                 <h3> Kind words from you </h3>
             </div>
@@ -89,7 +89,7 @@
 
 
 <!------------------ Footer ------------------->
-    <footer class="padded grid-spaceBetween">
+    <footer class="padded grid-spaceBetween bg-dark">
         <div class="col-5">
             <h3> Let's stay connected </h3>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem nostrum mollitia minima, recusandae expedita. Culpa provident ullam repellendus. </p>
