--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css">
 
 
+<!------------ Google Font Montserrat ------------>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
 <!---------- This is my custom style sheet - THIS ALWAYS GOES LAST (external resources always go above this) ----------> 
         <link href="/style.css" rel="stylesheet">
 
@@ -39,7 +45,7 @@
     </nav>
 
 <!---------------- about section ------------------>
-    <section class="grid">
+    <section class="grid bg-light">
         <div class="padded col-6">
             <h2> Hello beautiful soul </h2>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
@@ -55,6 +61,9 @@
 
 <!----- Banner image & button link to 'offerings' page ----->
     <section> 
+        <div class="col-12-middle text-center">
+            <h2> Book a class </h2>
+        </div>
         <!----- background image warrior3 ----->
         <div class="bg-image bg-warrior3 col-12"> </div>
     </section>
