Changing Header Image/ Colour

--- a/index.html
+++ b/index.html
@@ -26,23 +26,27 @@
 <body> 
 
        <!---------------- header banner ----------------->
-        <header class="padded grid text-center tall-50">
-            <div class="col-12-middle">
-                <h1> Cassandra Fay Yoga </h1>
-                <h3> Yoga Teacher, Brighton & Hove </h3>
+        <header class="padded grid text-center tall-70">
+            <div class="header-nav col-12-middle">
+                <div class= "col-12-middle"> 
+                    <a href="/index.html" class="logo"> 
+                    <h1 class="header-h1"> Cassandra Fay Yoga </h1>
+                    <h3 class="header-h3"> Yoga Teacher, Brighton & Hove </h3>
+                    </a>
+                </div>
             </div>
+            <div class="grid col-12-middle">
+                <nav class="col-12-middle home-nav">
+                    <a href="/index.html"> Home  </a>
+                    <a href="/about.html"> About </a>
+                    <a href="/offerings.html"> Offerings </a>
+                    <a href="/contact.html"> Contact </a>
+                </nav>
+            </div>
+
         </header>
     
-
-    <nav>
-        <a href="/about.html"> About </a>
-        <nav>
-            <a href="/offerings.html"> Offerings </a>
-        </nav>
-        <nav>
-            <a href="/contact.html"> Contact </a>
-        </nav>
-    </nav>
+   
 
 <!---------------- about section ------------------>
     <section class="grid bg-light">
@@ -53,7 +57,7 @@
             </p> 
         </div>
      <!------ background image prayer ------>
-        <div class="bg-image bg-prayer col-6 tall-40">
+        <div class="bg-image bg-prayer col-6 tall-50">
         </div>
     </section>    
 
@@ -65,7 +69,7 @@
             <h2> Book a class </h2>
         </div>
         <!----- background image warrior3 ----->
-        <div class="bg-image bg-warrior3 col-12"> </div>
+        <div class="bg-image bg-warrior3 col-12 tall-60"> </div>
     </section>
 
 
