Adding contact form 1

--- a/index.html
+++ b/index.html
@@ -75,24 +75,24 @@
 
 <!-------------- Testimonials Section -------------->
     <section class="grid padded bg-light">
-            <div class="padded-sm col-5">  
+            <div class="padded-sm col-5 text-center">  
                 <h3> Kind words from you </h3>
             </div>
-            <div>
-                <span class="col-1"> " </span> 
+            <div class="col-1 text-right">
+                <span> " </span> 
             </div>
             <div class="padded-sm col-5">
                 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et impedit numquam dolores nemo quae. </p>
                 <p> - A very happy customer </p>
             </div>
-            <div>
-                <span class="col-1"> " </span> 
+            <div class="col-1">
+                <span > " </span> 
             </div>
     </section>
 
 <!------------- Youtube Video/ Link ------------->
     <section class="grid padded">
-        <div  class="col-6"> 
+        <div  class="col-6 text-center"> 
             <h3> Flow with me on Youtube </h3>
         </div>
         <!------ background image youtube ------>
@@ -106,6 +106,12 @@
         <div class="col-5">
             <h3> Let's stay connected </h3>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem nostrum mollitia minima, recusandae expedita. Culpa provident ullam repellendus. </p>
+            <form>
+                <input type="text" name="name">
+                <input type="email" name="_replyto">
+                <textarea name="message">...</textarea>
+                <input type="submit" value="Send">
+            </form>
         </div>
         <div class="col-5">
             <p> Call: 077777777 </p>
