--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
             <h3> Let's stay connected </h3>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem nostrum mollitia minima, recusandae expedita. Culpa provident ullam repellendus. </p>
             <form>
-                <input type="text" name="name">
-                <input type="email" name="_replyto">
-                <textarea name="message">...</textarea>
-                <input type="submit" value="Send">
+                <input type="text" placeholder="Name" />
+                <input type="email" placeholder="Email" />
+                <textarea placeholder="Hi Cassandra..."></textarea>
+                <button type="submit"> Send </button>
             </form>
         </div>
         <div class="col-5">
