Moving banner image & font

--- a/index.html
+++ b/index.html
@@ -64,18 +64,17 @@
 
 
 <!----- Banner image & button link to 'offerings' page ----->
-    <section> 
+    <section class="bg-image bg-warrior3 col-12 tall-60"> 
         <div class="col-12-middle text-center">
             <h2> Book a class </h2>
         </div>
         <!----- background image warrior3 ----->
-        <div class="bg-image bg-warrior3 col-12 tall-60"> </div>
     </section>
 
 
 <!-------------- Testimonials Section -------------->
     <section class="grid padded bg-light">
-            <div class="padded-sm col-5 text-center">  
+            <div class="padded-sm col-5-middle text-center">  
                 <h3> Kind words from you </h3>
             </div>
             <div class="col-1 text-right">
