--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
 
 <!----- Banner image & button link to 'offerings' page ----->
-    <section class="bg-image bg-warrior3 col-12 tall-60"> 
-        <div class="col-12-middle text-center">
-            <h2> Book a class </h2>
+    <section class="banner bg-image bg-forwardfold col-12"> 
+        <div class="padded-sm col-12-middle text-center tall-50">
+            <h2 class="book-h2"> Book a class </h2>
         </div>
-        <!----- background image warrior3 ----->
+        <!----- background image forwardfold ----->
     </section>
 
 
@@ -80,7 +80,7 @@
             <div class="col-1 text-right">
                 <span> " </span> 
             </div>
-            <div class="padded-sm col-5">
+            <div class="padded-sm col-5 text-center">
                 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et impedit numquam dolores nemo quae. </p>
                 <p> - A very happy customer </p>
             </div>
@@ -91,11 +91,11 @@
 
 <!------------- Youtube Video/ Link ------------->
     <section class="grid padded">
-        <div  class="col-6 text-center"> 
+        <div class="col-6-middle text-center"> 
             <h3> Flow with me on Youtube </h3>
         </div>
         <!------ background image youtube ------>
-        <div class="bg-image bg-youtube col-6 tall-40">
+        <div class="bg-image bg-youtube col-6 tall-60">
         </div>
     </section>
 
