--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
 <!----- Banner image & button link to 'offerings' page ----->
-    <section class="banner bg-image bg-forwardfold col-12"> 
+    <section class="banner bg-image bg-mats col-12"> 
         <div class="padded-sm col-12-middle text-center tall-50">
             <h2 class="book-h2"> Book a class </h2>
         </div>
@@ -95,7 +95,8 @@
             <h3> Flow with me on Youtube </h3>
         </div>
         <!------ background image youtube ------>
-        <div class="bg-image bg-youtube col-6 tall-60">
+        <div class="col-6 tall-60">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/yxyw7Jnh0R8?si=xw_mPGH31eyppAwe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
