edit images and font colours

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
 <!----- Banner image & button link to 'offerings' page ----->
-    <section class="banner bg-image bg-mats col-12"> 
+    <section class="banner bg-image bg-cushions col-12"> 
         <div class="padded-sm col-12-middle text-center tall-50">
             <h2 class="book-h2"> Book a class </h2>
         </div>
