adding extra page & editing

--- a/about.html
+++ b/about.html
@@ -27,9 +27,54 @@
 <!------ Body contains all of the things we want to be displayed on the page ------>
     <body>
 
-        <header> </header>
-        <section> </section>
-        <footer> </footer>
+        <header class="padded grid text-center tall-50">
+            <div class="header-nav col-12-middle">
+                <div class= "col-12-middle"> 
+                    <a href="/index.html" class="logo"> 
+                    <h1 class="header-h1"> About </h1>
+                    </a>
+                </div>
+            </div>
+            <div class="grid col-12-middle">
+                <nav class="col-12-middle home-nav">
+                    <a href="/index.html"> Home  </a>
+                    <a href="/about.html"> About </a>
+                    <a href="/offerings.html"> Offerings </a>
+                    <a href="/contact.html"> Contact </a>
+                </nav>
+            </div>
+        </header>
+    
+        <!-------------- gallery/ about section -------------->
+        <section class="grid">
+            <div class="padded-lg col-5-middle">
+                <h2> Hello beautiful soul </h2>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur cupiditate non maxime aspernatur expedita dignissimos, corporis sapiente, ipsum minus optio qui impedit id natus corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur cupiditate non maxime. 
+                </p> 
+            </div>
+            <div class="bg-image col-7 tall-30">
+                <!--- background image --->
+            </div>
+            <div class="bg-image col-7 tall-30">
+                <!--- background image --->
+            </div>
+            <div class="padded-lg col-5-middle">
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quia obcaecati, debitis labore voluptatem sit odio modi a in accusamus soluta illo nihil nisi sed voluptate veniam molestias, possimus quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quia obcaecati, debitis labore voluptatem sit odio modi a in accusamus soluta illo nihil nisi sed voluptate veniam molestias, possimus quis.
+
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quia obcaecati, debitis labore voluptatem sit odio modi a in accusamus soluta illo nihil nisi sed voluptate veniam molestias, possimus quis.
+                </p>
+            </div>
+        </section>
+
+        <footer class="padded grid-spaceBetween bg-dark">
+            <div class="col-5 text-right">
+                <p> Call: 077777777 </p>
+                <p> Email: hello@yoga.com </p>
+                <p> Website: www.cassandrafayyoga.com </p>
+                <p> Instagram: @cassandrafayyoga </p>
+            </div>    
+        </footer>
 
 
     </body>
