--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body> 
 
        <!---------------- header banner ----------------->
-        <header class="padded grid text-center tall-70">
+        <header class="padded grid text-center tall-100">
             <div class="header-nav col-12-middle">
                 <div class= "col-12-middle"> 
                     <a href="/index.html" class="logo"> 
@@ -51,13 +51,20 @@
 <!---------------- about section ------------------>
     <section class="grid bg-light">
         <div class="padded col-6">
-            <h2> Hello beautiful soul </h2>
+            <h2> Hello Beautiful Soul </h2>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur cupiditate non maxime aspernatur expedita dignissimos, corporis sapiente, ipsum minus optio qui impedit id natus corrupti.
             </p> 
         </div>
      <!------ background image prayer ------>
-        <div class="bg-image bg-prayer col-6 tall-50">
+        <div class="bg-image bg-prayer col-6 tall-60">
+        </div>
+        <div class="bg-image col-6 tall-50">
+            <!--- background image --->
+        </div>
+        <div class="padded col-6-middle">
+            <h2> Workshops & Events </h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quia obcaecati, debitis labore voluptatem sit odio modi a in accusamus soluta illo nihil nisi sed voluptate veniam molestias, possimus quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quia obcaecati, debitis labore voluptatem sit odio modi a in accusamus soluta illo nihil nisi sed voluptate veniam molestias, possimus quis. </p>
         </div>
     </section>    
 
@@ -65,8 +72,8 @@
 
 <!----- Banner image & button link to 'offerings' page ----->
     <section class="banner bg-image bg-cushions col-12"> 
-        <div class="padded-sm col-12-middle text-center tall-50">
-            <h2 class="book-h2"> Book a class </h2>
+        <div class="padded-sm col-12-middle text-center tall-70">
+            <h2 class="book-h2"> Book a Class </h2>
         </div>
         <!----- background image forwardfold ----->
     </section>
@@ -75,7 +82,7 @@
 <!-------------- Testimonials Section -------------->
     <section class="grid padded bg-light">
             <div class="padded-sm col-5-middle text-center">  
-                <h3> Kind words from you </h3>
+                <h3> Kind Words from You </h3>
             </div>
             <div class="col-1 text-right">
                 <span> " </span> 
@@ -92,7 +99,7 @@
 <!------------- Youtube Video/ Link ------------->
     <section class="grid padded">
         <div class="col-6-middle text-center"> 
-            <h3> Flow with me on Youtube </h3>
+            <h3> Flow with Me on Youtube </h3>
         </div>
         <!------ background image youtube ------>
         <div class="col-6 tall-60">
@@ -105,7 +112,7 @@
     <footer class="padded grid-spaceBetween bg-dark">
         <div class="col-5">
             <h3> Let's stay connected </h3>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem nostrum mollitia minima, recusandae expedita. Culpa provident ullam repellendus. </p>
+            <p class="footer-p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem nostrum mollitia minima, recusandae expedita. Culpa provident ullam repellendus. </p>
             <form>
                 <input type="text" placeholder="Name" />
                 <input type="email" placeholder="Email" />
